[tool.poetry]
name = "adminapi"
version = "4.7.0"
description = "Central server database management system of InnoGames"
authors = [
    "Daniel Kröger <daniel.kroeger@innogames.com>",
    "Emre Hasegeli <emre@hasegeli.com>",
    "Henning Pridöhl <henning@hprid.de>",
    "Patrick Meyer <git@the-space.agency>",
]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"
netaddr = "^0.8.0"
paramiko = "^2.7.2"


[tool.poetry.group.django-backend.dependencies]
django = "^3.2.0"
psycopg2-binary = "^2.9.0"
django-netfields = "^1.2.0"
pillow = "^8.1.0"
dateparser = "^1.1.0"
django-environ = "^0.4.4"
django-compressor = "^2.4.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^4.3.0"
sphinx-rtd-theme = "^1.2.0"
django-extensions = "^3.2.1"
werkzeug = "^2.2.3"
faker = "^17.0.0"
tblib = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
