[package]
name = "adminapi"
version = "0.1.0"
edition = "2021"
description = "The ServerAdmin API available in Rust"
license = "MIT"
readme = "README.md"
authors = ["InnoGames System Administration <it@innogames.com>"]
repository = "https://github.com/innogames/serveradmin/"

[dependencies]
anyhow = "1.0"
hmac = "0.12"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
signature = "2.2"
ssh-agent-client-rs = "0.9"
ssh-encoding = { version = "0.2.0", features = ["base64"] }
ssh-key = { version = "0.6", features = ["serde", "ed25519", "dsa", "crypto", "rsa"] }

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1.37", features = ["full"] }
clap = "4.5"
futures = "0.3"
